<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/root_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".view.matches.detail.MatchDetailActivity">

    <ProgressBar
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:id="@+id/progressbar"
            android:layout_centerInParent="true"
            android:layout_gravity="center"
            android:indeterminate="true"/>

    <ScrollView
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_height="match_parent"
            android:layout_width="match_parent">


        <LinearLayout
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:context=".MVP.Details.DetailMatch"
                android:layout_margin="15dp"
                android:orientation="vertical"
                xmlns:android="http://schemas.android.com/apk/res/android">
            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical">
                    <ImageView
                            android:id="@+id/imageHome"
                            android:layout_width="80dp"
                            android:layout_height="80dp"
                            android:layout_gravity="center_horizontal"/>
                    <TextView
                            android:id="@+id/txtteamHome"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="20sp"
                            android:layout_gravity="center_horizontal"
                            android:textColor="@color/colorPrimary"/>
                </LinearLayout>
                <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical">

                    <TextView
                            android:id="@+id/txtDate"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:textColor="@color/colorPrimary"
                            android:textSize="14sp"
                            android:gravity="center"/>
                    <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:id="@+id/txtTime"
                            android:layout_weight="1"
                            android:textColor="@color/colorPrimary"
                            android:textSize="14sp"
                            android:gravity="center"/>

                    <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:orientation="horizontal">

                        <TextView
                                android:id="@+id/txtscoreHome"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:textStyle="bold"
                                android:textSize="34sp"
                                android:gravity="center"/>

                        <TextView
                                android:text="@string/vs"
                                android:layout_width="0dp"
                                android:layout_weight="1"
                                android:layout_height="wrap_content"
                                android:textSize="20sp"
                                android:gravity="center"/>

                        <TextView
                                android:id="@+id/txtscoreAway"
                                android:layout_width="0dp"
                                android:layout_weight="1"
                                android:layout_height="wrap_content"
                                android:textStyle="bold"
                                android:textSize="34sp"
                                android:gravity="center"/>

                    </LinearLayout>

                </LinearLayout>
                <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical">
                    <ImageView
                            android:id="@+id/imageAway"
                            android:layout_width="80dp"
                            android:layout_height="80dp"
                            android:layout_gravity="center_horizontal"/>
                    <TextView
                            android:id="@+id/txtteamAway"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="20sp"
                            android:layout_gravity="center_horizontal"
                            android:textColor="@color/colorPrimary"/>
                </LinearLayout>
            </LinearLayout>
            <View style="@style/Line"/>
            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                <TextView
                        android:id="@+id/txtGoalsHome"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="start"/>
                <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/goals"
                        android:textColor="@color/colorPrimary"
                        android:gravity="center"/>
                <TextView
                        android:id="@+id/txtGoalsAway"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="end"/>
            </LinearLayout>
            <View style="@style/Line"/>
            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                <TextView
                        android:id="@+id/txtShotsHome"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="start"/>
                <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/shots"
                        android:textColor="@color/colorPrimary"
                        android:gravity="center"/>
                <TextView
                        android:id="@+id/txtShotsAway"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="end"/>
            </LinearLayout>
            <View style="@style/Line"/>
            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                <TextView
                        android:id="@+id/txtHomeGoalKeeper"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="start"/>
                <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/goal_keeper"
                        android:textColor="@color/colorPrimary"
                        android:gravity="center"/>
                <TextView
                        android:id="@+id/txtAwayGoalKeeper"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="end"/>
            </LinearLayout>
            <View style="@style/Line"/>
            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                <TextView
                        android:id="@+id/txtHomeDefense"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="start"/>
                <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/defense"
                        android:textColor="@color/colorPrimary"
                        android:gravity="center"/>
                <TextView
                        android:id="@+id/txtAwayDefense"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="end"/>
            </LinearLayout>
            <View style="@style/Line"/>
            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                <TextView
                        android:id="@+id/txtHomeMidfield"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="start"/>
                <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/midfield"
                        android:textColor="@color/colorPrimary"
                        android:gravity="center"/>
                <TextView
                        android:id="@+id/txtAwayMidfield"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="end"/>
            </LinearLayout>
            <View style="@style/Line"/>
            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                <TextView
                        android:id="@+id/txtHomeForward"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="start"/>
                <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/forward"
                        android:textColor="@color/colorPrimary"
                        android:gravity="center"/>
                <TextView
                        android:id="@+id/txtAwayForward"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="end"/>
            </LinearLayout>
            <View style="@style/Line"/>
            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                <TextView
                        android:id="@+id/txtHomeFormation"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="start"/>
                <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/formation"
                        android:textColor="@color/colorPrimary"
                        android:gravity="center"/>
                <TextView
                        android:id="@+id/txtAwayFormation"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="end"/>
            </LinearLayout>
            <View style="@style/Line"/>
            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                <TextView
                        android:id="@+id/txtHomeSubtitutes"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="start"/>
                <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/subtitutes"
                        android:textColor="@color/colorPrimary"
                        android:gravity="center"/>
                <TextView
                        android:id="@+id/txtAwaySubtitutes"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="end"/>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</android.support.design.widget.CoordinatorLayout>